--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
     <div class="mydiv">
       <div class="mydiv1">
         <p>This is div1</p>
-        <a href="registration.html"><img src="elephant.jpg" alt="Elephant"></a>
+        <a href="login.html"><img src="elephant.jpg" alt="Elephant"></a>
       </div>
 
       <div class="mydiv2">
         <p>This is div2</p>
-       <a href="login.html"> <img src="chita.jpg" alt="Chita"></a>
+       <a href="registration.html"> <img src="chita.jpg" alt="Chita"></a>
       </div>
     </div>
 
